--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 'IIT Hyderabad',
                 'VNR VJIET',
                 'VBIT',
-                'Professionals',
+                'Professionals & Others',
                 'JNTUH',
                 'MLRIT',
                 'VJIT',
