--- a/index.html
+++ b/index.html
@@ -52,20 +52,22 @@
             { label: 'IIT Hyderabad', frequency: 5 },
             { label: 'VNR VJIET', frequency: 56 },
             { label: 'VBIT', frequency: 5 },
-            { label: 'Professionals & Others', frequency: 6 },
+            { label: 'Professionals & Others', frequency: 12 },
             { label: 'JNTUH', frequency: 1 },
             { label: 'MLRIT', frequency: 4 },
             { label: 'VJIT', frequency: 2 },
             { label: 'National Forensic Science University', frequency: 4 },
             { label: 'Sri Indu College of Engineering and Technology', frequency: 5 },
             { label: 'Osmania University', frequency: 2 },
-            { label: 'IIIT H', frequency: 25 },
+            { label: 'IIIT H', frequency: 30 },
             { label: 'St Josephs', frequency: 2 },
             { label: 'CVR College', frequency: 3 },
             { label: 'Institute of Aeronautical Engineering', frequency: 10},
             { label: 'Shri vishnu engineering college for women', frequency: 2},
-            { label: 'Malla Reddy University', frequency: 5},
-            { label: 'Guru nanak institutions of technology', frequency: 5}
+            { label: 'Malla Reddy University', frequency: 8},
+            { label: 'Guru nanak institutions of technology', frequency: 5},
+            { label: 'Lords College', frequency: 2},
+            { label: 'ISL College', frequency: 1}
         ];
 
         // Sort the data by frequency in descending order
