--- a/index.html
+++ b/index.html
@@ -50,24 +50,25 @@
         // Initial data
         const colleges = [
             { label: 'IIT Hyderabad', frequency: 5 },
-            { label: 'VNR VJIET', frequency: 56 },
+            { label: 'VNR VJIET', frequency: 61 },
             { label: 'VBIT', frequency: 5 },
-            { label: 'Professionals & Others', frequency: 12 },
+            { label: 'Professionals & Others', frequency: 17 },
             { label: 'JNTUH', frequency: 1 },
             { label: 'MLRIT', frequency: 4 },
             { label: 'VJIT', frequency: 2 },
-            { label: 'National Forensic Science University', frequency: 4 },
+            { label: 'National Forensic Science University', frequency: 5 },
             { label: 'Sri Indu College of Engineering and Technology', frequency: 5 },
             { label: 'Osmania University', frequency: 2 },
-            { label: 'IIIT H', frequency: 30 },
+            { label: 'IIIT H', frequency: 41 },
             { label: 'St Josephs', frequency: 2 },
             { label: 'CVR College', frequency: 3 },
             { label: 'Institute of Aeronautical Engineering', frequency: 10},
-            { label: 'Shri vishnu engineering college for women', frequency: 2},
-            { label: 'Malla Reddy University', frequency: 8},
+            { label: 'Shri vishnu engineering college for women', frequency: 4},
+            { label: 'Malla Reddy University', frequency: 18},
             { label: 'Guru nanak institutions of technology', frequency: 5},
             { label: 'Lords College', frequency: 2},
-            { label: 'ISL College', frequency: 1}
+            { label: 'ISL College', frequency: 1},
+            { label: 'KL University', frequency: 1}
         ];
 
         // Sort the data by frequency in descending order
