29 jan 9pm update

--- a/index.html
+++ b/index.html
@@ -52,23 +52,25 @@
             { label: 'IIT Hyderabad', frequency: 5 },
             { label: 'VNR VJIET', frequency: 61 },
             { label: 'VBIT', frequency: 5 },
-            { label: 'Professionals & Others', frequency: 17 },
+            { label: 'Professionals & Others', frequency: 19 },
             { label: 'JNTUH', frequency: 1 },
             { label: 'MLRIT', frequency: 4 },
             { label: 'VJIT', frequency: 2 },
             { label: 'National Forensic Science University', frequency: 5 },
             { label: 'Sri Indu College of Engineering and Technology', frequency: 5 },
-            { label: 'Osmania University', frequency: 2 },
-            { label: 'IIIT H', frequency: 41 },
+            { label: 'Osmania University', frequency: 3 },
+            { label: 'IIIT H', frequency: 47 },
             { label: 'St Josephs', frequency: 2 },
             { label: 'CVR College', frequency: 3 },
             { label: 'Institute of Aeronautical Engineering', frequency: 10},
             { label: 'Shri vishnu engineering college for women', frequency: 4},
-            { label: 'Malla Reddy University', frequency: 18},
+            { label: 'Malla Reddy University', frequency: 19},
             { label: 'Guru nanak institutions of technology', frequency: 5},
             { label: 'Lords College', frequency: 2},
             { label: 'ISL College', frequency: 1},
-            { label: 'KL University', frequency: 1}
+            { label: 'KL University', frequency: 1},
+            { label: 'Gitam', frequency: 2},
+            { label: 'University of Hyderabad', frequency: 3}
         ];
 
         // Sort the data by frequency in descending order
