--- a/index.html
+++ b/index.html
@@ -57,20 +57,21 @@
             { label: 'MLRIT', frequency: 4 },
             { label: 'VJIT', frequency: 2 },
             { label: 'National Forensic Science University', frequency: 5 },
-            { label: 'Sri Indu College of Engineering and Technology', frequency: 5 },
+            { label: 'Sri Indu College of Engineering and Technology', frequency: 10 },
             { label: 'Osmania University', frequency: 3 },
-            { label: 'IIIT H', frequency: 52 },
+            { label: 'IIIT H', frequency: 57 },
             { label: 'St Josephs', frequency: 2 },
             { label: 'CVR College', frequency: 3 },
             { label: 'Institute of Aeronautical Engineering', frequency: 10},
             { label: 'Shri vishnu engineering college for women', frequency: 4},
             { label: 'Malla Reddy University', frequency: 19},
-            { label: 'Guru nanak institutions of technology', frequency: 5},
+            { label: 'Guru nanak institutions of technology', frequency: 10},
             { label: 'Lords College', frequency: 2},
             { label: 'ISL College', frequency: 1},
-            { label: 'KL University', frequency: 1},
+            { label: 'KL University', frequency: 6},
             { label: 'Gitam', frequency: 2},
-            { label: 'University of Hyderabad', frequency: 3}
+            { label: 'University of Hyderabad', frequency: 3},
+            { label: 'SNIST', frequency: 3}
         ];
 
         // Sort the data by frequency in descending order
