--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         // Initial data
         const colleges = [
             { label: 'IIT Hyderabad', frequency: 5 },
-            { label: 'VNR VJIET', frequency: 64 },
+            { label: 'VNR VJIET', frequency: 66 },
             { label: 'VBIT', frequency: 5 },
-            { label: 'Professionals & Others', frequency: 19 },
+            { label: 'Professionals & Others', frequency: 25 },
             { label: 'JNTUH', frequency: 1 },
             { label: 'MLRIT', frequency: 4 },
             { label: 'VJIT', frequency: 2 },
@@ -62,16 +62,17 @@
             { label: 'IIIT H', frequency: 57 },
             { label: 'St Josephs', frequency: 2 },
             { label: 'CVR College', frequency: 3 },
-            { label: 'Institute of Aeronautical Engineering', frequency: 10},
+            { label: 'Institute of Aeronautical Engineering', frequency: 11},
             { label: 'Shri vishnu engineering college for women', frequency: 4},
-            { label: 'Malla Reddy University', frequency: 19},
-            { label: 'Guru nanak institutions of technology', frequency: 10},
+            { label: 'Malla Reddy University', frequency: 29},
+            { label: 'Guru nanak institutions of technology', frequency: 15},
             { label: 'Lords College', frequency: 2},
             { label: 'ISL College', frequency: 1},
             { label: 'KL University', frequency: 6},
             { label: 'Gitam', frequency: 2},
             { label: 'University of Hyderabad', frequency: 3},
-            { label: 'SNIST', frequency: 3}
+            { label: 'SNIST', frequency: 3},
+            { label: 'Vignans institute of engineering for women', frequency: 1}
         ];
 
         // Sort the data by frequency in descending order
