--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
             { label: 'MLRIT', frequency: 4 },
             { label: 'VJIT', frequency: 2 },
             { label: 'National Forensic Science University', frequency: 5 },
-            { label: 'Sri Indu College of Engineering and Technology', frequency: 10 },
+            { label: 'Sri Indu College of Engineering and Technology', frequency: 15 },
             { label: 'Osmania University', frequency: 3 },
-            { label: 'IIIT H', frequency: 57 },
+            { label: 'IIIT H', frequency: 65 },
             { label: 'St Josephs', frequency: 2 },
             { label: 'CVR College', frequency: 3 },
-            { label: 'Institute of Aeronautical Engineering', frequency: 11},
+            { label: 'Institute of Aeronautical Engineering', frequency: 15},
             { label: 'Shri vishnu engineering college for women', frequency: 4},
             { label: 'Malla Reddy University', frequency: 29},
             { label: 'Guru nanak institutions of technology', frequency: 15},
@@ -72,7 +72,9 @@
             { label: 'Gitam', frequency: 2},
             { label: 'University of Hyderabad', frequency: 3},
             { label: 'SNIST', frequency: 3},
-            { label: 'Vignans institute of engineering for women', frequency: 1}
+            { label: 'Vignans institute of engineering for women', frequency: 1},
+            { label: 'Anurag University', frequency: 7},
+            { label: 'ICFAI Jaipur', frequency: 2}
         ];
 
         // Sort the data by frequency in descending order
