--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         // Initial data
         const colleges = [
             { label: 'IIT Hyderabad', frequency: 5 },
-            { label: 'VNR VJIET', frequency: 66 },
+            { label: 'VNR VJIET', frequency: 70 },
             { label: 'VBIT', frequency: 5 },
             { label: 'Professionals & Others', frequency: 25 },
             { label: 'JNTUH', frequency: 1 },
@@ -59,12 +59,12 @@
             { label: 'National Forensic Science University', frequency: 5 },
             { label: 'Sri Indu College of Engineering and Technology', frequency: 15 },
             { label: 'Osmania University', frequency: 3 },
-            { label: 'IIIT H', frequency: 66 },
+            { label: 'IIIT H', frequency: 76 },
             { label: 'St Josephs', frequency: 2 },
             { label: 'CVR College', frequency: 3 },
             { label: 'Institute of Aeronautical Engineering', frequency: 15},
             { label: 'Shri vishnu engineering college for women', frequency: 4},
-            { label: 'Malla Reddy University', frequency: 53},
+            { label: 'Malla Reddy University', frequency: 62},
             { label: 'Guru nanak institutions of technology', frequency: 15},
             { label: 'Lords College', frequency: 2},
             { label: 'ISL College', frequency: 1},
@@ -75,9 +75,10 @@
             { label: 'Vignans institute of engineering for women', frequency: 1},
             { label: 'Anurag University', frequency: 10},
             { label: 'ICFAI Jaipur', frequency: 2},
-            { label: 'Narasimha Reddy College', frequency: 10},
+            { label: 'Narasimha Reddy College', frequency: 11},
             { label: 'RGUKT', frequency: 1},
-            { label: 'IIIT K', frequency: 2}
+            { label: 'IIIT K', frequency: 2},
+            { label: 'CMR College', frequency: 3}
         ];
 
         // Sort the data by frequency in descending order
