--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
             { label: 'National Forensic Science University', frequency: 5 },
             { label: 'Sri Indu College of Engineering and Technology', frequency: 15 },
             { label: 'Osmania University', frequency: 3 },
-            { label: 'IIIT H', frequency: 76 },
+            { label: 'IIIT H', frequency: 88 },
             { label: 'St Josephs', frequency: 2 },
             { label: 'CVR College', frequency: 3 },
             { label: 'Institute of Aeronautical Engineering', frequency: 15},
             { label: 'Shri vishnu engineering college for women', frequency: 4},
-            { label: 'Malla Reddy University', frequency: 62},
-            { label: 'Guru nanak institutions of technology', frequency: 15},
+            { label: 'Malla Reddy University', frequency: 67},
+            { label: 'Guru nanak institutions of technology', frequency: 16},
             { label: 'Lords College', frequency: 2},
             { label: 'ISL College', frequency: 1},
             { label: 'KL University', frequency: 6},
@@ -75,10 +75,11 @@
             { label: 'Vignans institute of engineering for women', frequency: 1},
             { label: 'Anurag University', frequency: 10},
             { label: 'ICFAI Jaipur', frequency: 2},
-            { label: 'Narasimha Reddy College', frequency: 11},
+            { label: 'Narasimha Reddy College', frequency: 16},
             { label: 'RGUKT', frequency: 1},
             { label: 'IIIT K', frequency: 2},
-            { label: 'CMR College', frequency: 3}
+            { label: 'CMR College', frequency: 3},
+            { label: 'BVRIT College', frequency: 4}
         ];
 
         // Sort the data by frequency in descending order
