--- a/index.html
+++ b/index.html
@@ -50,36 +50,40 @@
         // Initial data
         const colleges = [
             { label: 'IIT Hyderabad', frequency: 5 },
-            { label: 'VNR VJIET', frequency: 70 },
+            { label: 'VNR VJIET', frequency: 74 },
             { label: 'VBIT', frequency: 5 },
-            { label: 'Professionals & Others', frequency: 25 },
-            { label: 'JNTUH', frequency: 1 },
+            { label: 'Professionals & Others', frequency: 31 },
+            { label: 'JNTUH', frequency: 2 },
             { label: 'MLRIT', frequency: 4 },
             { label: 'VJIT', frequency: 2 },
             { label: 'National Forensic Science University', frequency: 5 },
             { label: 'Sri Indu College of Engineering and Technology', frequency: 15 },
             { label: 'Osmania University', frequency: 3 },
-            { label: 'IIIT H', frequency: 88 },
+            { label: 'IIIT H', frequency: 106 },
             { label: 'St Josephs', frequency: 2 },
             { label: 'CVR College', frequency: 3 },
-            { label: 'Institute of Aeronautical Engineering', frequency: 15},
+            { label: 'Institute of Aeronautical Engineering', frequency: 20},
             { label: 'Shri vishnu engineering college for women', frequency: 4},
-            { label: 'Malla Reddy University', frequency: 67},
+            { label: 'Malla Reddy University', frequency: 68},
             { label: 'Guru nanak institutions of technology', frequency: 16},
-            { label: 'Lords College', frequency: 2},
+            { label: 'Lords College', frequency: 3},
             { label: 'ISL College', frequency: 1},
             { label: 'KL University', frequency: 6},
             { label: 'Gitam', frequency: 2},
             { label: 'University of Hyderabad', frequency: 3},
-            { label: 'SNIST', frequency: 3},
+            { label: 'SNIST', frequency: 6},
             { label: 'Vignans institute of engineering for women', frequency: 1},
             { label: 'Anurag University', frequency: 10},
             { label: 'ICFAI Jaipur', frequency: 2},
             { label: 'Narasimha Reddy College', frequency: 16},
             { label: 'RGUKT', frequency: 1},
             { label: 'IIIT K', frequency: 2},
-            { label: 'CMR College', frequency: 3},
-            { label: 'BVRIT College', frequency: 4}
+            { label: 'CMR College', frequency: 6},
+            { label: 'BVRIT College', frequency: 4},
+            { label: 'BITS', frequency: 1},
+            { label: 'KMCE', frequency: 4},
+            { label: 'NSAKCET', frequency: 3},
+            { label: 'RJKDR', frequency: 1}
         ];
 
         // Sort the data by frequency in descending order
